fix issue with overflow todo list on mobile devices

--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -175,7 +175,7 @@ body, #root{
 
 .todos{
     min-width: 100%;
-    max-width: 100%;
+    height: fit-content;
     margin-bottom: 10px;
     display: flex;
     flex-direction: column;
@@ -232,7 +232,7 @@ body, #root{
 @media screen and (max-width: 800px) {
     .input-container, .todos-container{
         width: 100%;
-        height: 100vh;
+        min-height: 100vh;
     }
 
     .input-button{
@@ -241,6 +241,10 @@ body, #root{
 
     .change-user, .input-button-todo, .todo, .todo-denied{
         font-size: 0.9em;
+    }
+
+    .todo-list{
+        height: fit-content;
     }
 
     #edit{
